Fix up dark mode colors

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -30,16 +30,14 @@ body {
   }
 
   &-search {
+    padding: 1.2rem;
     display: flex;
     flex-basis: 35%;
     align-items: center;
     justify-content: space-between;
     background-color: var(--search);
-    box-shadow: 0 4px 30px var(--shadow);
+    // box-shadow: 0 4px 30px var(--shadow);
 
-    & img {
-      height: 1.8rem;
-    }
     @media screen and (max-width: 600px) {
       & {
         flex-basis: 100%;
@@ -50,39 +48,51 @@ body {
   }
 
   &-search__input {
+    color: var(--primary-text-color);
     background-color: inherit;
     width: 100%;
-    padding: 1rem 1.4rem;
     border: none;
-    border-radius: 6px;
+    border-radius: 7px;
     font-family: inherit;
     font-size: 1.8rem;
     outline: 0;
-    // font-weight: 500;
   }
   &-search__button {
     border: none;
-    margin-left: 1rem;
-    // background-color: #fff;
+    margin-right: 1rem;
     background-color: var(--primary-text-background);
-    /*
-    @media screen and (max-width: 650px) {
-      & {
-        width: 1.2rem;
-        height: 1.2rem;
-      }
-    } */
+    background-color: inherit;
   }
 }
 
+.search-icon {
+  fill: var(--primary-text-color);
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+// * {
+//   outline: 1px solid red;
+// }
 .mode-button {
   border: none;
   cursor: pointer;
+  outline: none;
+  // background-color: var(--search);
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 3px;
 }
 
 .mode-icon {
-  // background-color: #f0f6fb;
-  background-color: transparent;
+  height: 22px;
+
+  &--dark {
+    fill: var(--primary-text-color);
+  }
+  &--light {
+    fill: var(--primary-text-color);
+  }
 }
 /* TABLE */
 .table {
@@ -166,7 +176,7 @@ body {
   }
 
   .footer-icon {
-    fill: #111;
+    fill: var(--loading);
     height: 3.2rem;
   }
 }
@@ -212,7 +222,7 @@ body {
   padding: 2rem 3rem;
   background-color: var(--primary-text-background);
   border-radius: 5px;
-  // box-shadow: 0px 4px 30px #e0e0e0;
+  box-shadow: 0px 4px 30px var(--shadow);
 
   @media screen and (max-width: 650px) {
     & {
